concord_macros/tests/v5/dsl/fail/fail_old_auth_block.stderr
error: `auth { credential ... }` was removed in v5; use `credential name = ...` in the client body
 --> tests/v5/dsl/fail/fail_old_auth_block.rs:6:14
  |
6 |         auth {
  |              ^
